PROJECT(EadCel)
cmake_minimum_required(VERSION 2.8)


FIND_LIBRARY(RT_LIBRARY NAMES rt REQUIRED)
FIND_LIBRARY(RT_LIBRARY NAMES gtest REQUIRED)
FIND_LIBRARY(RT_LIBRARY NAMES pthread REQUIRED)
FIND_LIBRARY(RT_LIBRARY NAMES pcap REQUIRED)

ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(sockets)
#ADD_SUBDIRECTORY(queue)
#ADD_SUBDIRECTORY(net)

#INCLUDE_DIRECTORIES(${EadCel_SOURCE_DIR} ${EadCel_SOURCE_DIR}/common ${EadCel_SOURCE_DIR}/thread ${EadCel_SOURCE_DIR}/sockets)
#ADD_EXECUTABLE(EadCel ${EADCEL_SOURCES})
#TARGET_LINK_LIBRARIES(EadCel thread common sockets)

